[package]
name = "wgpu-biolerless"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Use WGPU for your graphical application but without the usual biolerplate"
repository = "https://github.com/terrarier2111/wgpu-boilerless"
readme = "README.md"
keywords = ["wgpu", "gpu", "gamedev", "graphics"]
categories = ["graphics", "rendering", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Implements the WindowSize trait for winit's Window
winit = ["dep:winit"]

[dependencies]
wgpu = "0.13.1"
bytemuck = { version = "1.12.0", features = ["derive"] }
parking_lot = "0.12.1"
anyhow = "1.0.60"
raw-window-handle = "0.4.3"
winit = { version = "0.27.2", optional = true }
