[package]
name = "wgpu-biolerless"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Use WGPU for your graphical application but without the usual boilerplate"
repository = "https://github.com/terrarier2111/wgpu-boilerless"
readme = "README.md"
keywords = ["wgpu", "gpu", "gamedev", "graphics"]
categories = ["graphics", "rendering", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Implements the WindowSize trait for winit's Window
winit = ["dep:winit"]
# Certain functions will take an additional debug label argument
debug_labels = []
# Allows for a manual supply of instances of wgpu's basic components
custom_data = []

[dependencies]
wgpu = "0.19"
bytemuck = { version = "1.13", features = ["derive"] }
parking_lot = "0.12"
anyhow = "1.0"
raw-window-handle = "0.6"
winit = { version = "0.29", optional = true }
